--- a/style.scss
+++ b/style.scss
@@ -1,91 +1,285 @@
-
-h1{
-  font-size: 30px;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 300;
-  text-align: center;
-  margin-bottom: 15px;
+@mixin transition($property: all, $duration: 200ms, $delay: 0ms, $easing: ease-in-out) {
+	-webkit-transition: $property $duration $delay $easing;
+	-moz-transition:    $property $duration $delay $easing;
+	-ms-transition:     $property $duration $delay $easing;
+	-o-transition:      $property $duration $delay $easing;
+	transition:         $property $duration $delay $easing;
 }
-table{
+
+
+@mixin full-bg($position: center center, $size: cover) {
+	background-repeat:       no-repeat;
+	background-position:     $position; 
+	-webkit-background-size: $size;
+	-moz-background-size:    $size;
+	-o-background-size:      $size;
+	-ms-background-size:     $size;
+	background-size:         $size;
+}
+
+@mixin transform($blah) {
+	-webkit-transform: $blah;
+	-moz-transform:    $blah;
+	-ms-transform:     $blah;
+	-o-transform:      $blah;
+	transform:         $blah;
+}
+// Mixins
+@mixin border-radius($size){
+	-webkit-border-radius:  $size;
+	-moz-border-radius:  $size;
+	border-radius: $size;
+}
+@mixin opacity($opacity) {
+  opacity: $opacity;
+  $opacity-ie: $opacity * 100;
+  filter: alpha(opacity=$opacity-ie); //IE8
+}
+
+
+.clear:before {
+  content: '';
+  display: table;
+}
+.clear:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+// Variables
+$frameH:500px;
+$frameW:620px;
+$padding-left:35px;
+$blue:#007dc3;
+
+//fonts
+$h2-FF:"ff-tisa-web-pro";
+$p-FF: "futura-pt", sans-serif;
+h2{
+  font-family:$h2-FF;
+  font-weight:500;
+  font-size:32px;
+  line-height:38px;
+  margin:0;
+}
+p,section{
+  margin-top:0px;
+  line-height:22px;
+  margin-bottom:20px;
+}
+.full-bk{
+  position:fixed;
+  font-family:$p-FF;
+  background-color:#333;
+  overflow:hidden;
+  background-image:url('https://papers.co/wallpaper/papers.co-bj42-apple-iphone-ios13-background-orange-art-36-3840x2400-4k-wallpaper.jpg');
+  @include full-bg;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
   width:100%;
-  table-layout: fixed;
-}
-.tbl-header{
-  background-color: rgba(255,255,255,0.3);
- }
-.tbl-content{
-  height:300px;
-  overflow-x:auto;
-  margin-top: 0px;
-  border: 1px solid rgba(255,255,255,0.3);
-}
-th{
-  padding: 20px 15px;
-  text-align: left;
-  font-weight: 500;
-  font-size: 12px;
-  color: #fff;
-  text-transform: uppercase;
-}
-td{
-  padding: 15px;
-  text-align: left;
-  vertical-align:middle;
-  font-weight: 300;
-  font-size: 12px;
-  color: #fff;
-  border-bottom: solid 1px rgba(255,255,255,0.1);
+  height:100%;
 }
 
 
-/* demo styles */
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-body{
-  background: -webkit-linear-gradient(left, #25c481, #25b7c4);
-  background: linear-gradient(to right, #25c481, #25b7c4);
-  font-family: 'Roboto', sans-serif;
+.img-bk{
+  
+  -webkit-transition: z-index 0ms 0ms ease-in, opacity 250ms 50ms ease-in-out;
+	-moz-transition:    z-index 0ms 0ms ease-in, opacity 250ms 50ms ease-in-out;
+	-ms-transition:     z-index 0ms 0ms ease-in, opacity 250ms 50ms ease-in-out;
+	-o-transition:      z-index 0ms 0ms ease-in, opacity 250ms 50ms ease-in-out;
+	transition:         z-index 0ms 0ms ease-in, opacity 250ms 50ms ease-in-out;
+  overflow:hidden;
+  background-color:white;
+  @include border-radius(6px);
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  position:absolute;
+  @include full-bg;
+  @include opacity(0);
+  z-index:0;
+  &.active{
+    @include opacity(1);
+    z-index:1;
+  }
 }
-section{
-  margin: 50px;
+.img-bk[data-img='step0']{
+   background-image:url('https://www.chefspencil.com/wp-content/uploads/Tinolang-Manok-1.jpg'); 
+}
+.img-bk[data-img='step1']{
+   background-image:url('https://thekitchencommunity.org/wp-content/uploads/2020/12/9-Best-Cast-Iron-Seasoning-Oils-e1607326493958-1200x900.jpg'); 
+}
+.img-bk[data-img='step2']{
+   background-image:url('https://thumbs.gfycat.com/GrizzledBouncyJaeger-size_restricted.gif'); 
+}
+.img-bk[data-img='step3']{
+   background-image:url('https://nomnomjal.files.wordpress.com/2011/05/imag0175.jpg'); 
+}
+.img-bk[data-img='step4']{
+   background-image:url("https://nomnomjal.files.wordpress.com/2011/05/imag0175.jpg"); 
+}
+.img-bk[data-img='step5']{
+   background-image:url('https://i.imgur.com/TLypyd6.gif'); 
+}
+.widget-frame{
+  overflow:hidden;
+  @include border-radius(6px);
+  width:$frameW;
+  height:$frameH;
+  margin:12% auto;
+  position:relative;
+  @include full-bg;
+    /*background-image:url('https://papers.co/wallpaper/papers.co-bj42-apple-iphone-ios13-background-orange-art-36-3840x2400-4k-wallpaper.jpg');*/
+  .actions{
+    z-index:9999;
+    position:absolute;
+    bottom:30px;
+    left:30px;
+    width:auto;
+    padding:0px 10px;
+    span {
+      cursor:pointer;
+      @include transition;
+      margin:0px;
+      padding:8px 10px;
+      display:inline-block;
+      @include border-radius(4px 0px 0px 4px);
+      background-color:$blue;
+      img{
+        vertical-align:-6%;
+      }
+      &:hover{
+        background-color:darken($blue,10%);
+      }
+    }
+    a{
+      @include transition;
+      @include border-radius( 0px 4px 4px 0px );
+      background-color:$blue;
+      padding:8px 10px;
+      display:inline-block;
+      margin:0px 0px 0px -4px;
+      color:white;
+      font-family:$p-FF;
+      font-weight:400;
+      text-decoration:none;
+      border-left:1px solid fade-out(white,.8);
+      &:hover{
+        background-color:darken($blue,10%);
+      }
+    }
+  }
+  .right{
+    background-color:white;
+    @include border-radius(0 6px  6px 0);
+    position:relative;
+    width:50%;
+    left:50%;
+    z-index:10;
+    top:0;
+    bottom:0;
+    height:100%;
+    overflow:scroll;
+
+   
+  }
+  .title-meta{
+    padding:20px 0px 0px $padding-left;
+    .stars{
+      margin-top:15px;
+    }
+  }
+  .time-wrap{
+    $cirle:70px;
+    top:120px;
+    position:absolute;
+    background:white;
+    width:$cirle;
+    height:$cirle;
+    @include border-radius(50%);
+    text-align:center;
+    display:table;
+    left:50%;
+    margin-left:-$cirle/2;
+    z-index:9999;
+    @include transition;
+    &.running{
+      top:15px;
+    }
+    >div{
+      display:table-cell;
+      vertical-align:middle;
+      font-size:28px;
+      margin-top:10px;
+      @include transition;
+      .time{@include transition;}
+      .meta{
+        display:block;
+        width:100%;
+        text-transform:uppercase;
+        font-size:13px;
+      }
+    }
+  }
+  .ingredients{
+    background-color:white;
+    border-bottom:1px solid #eee;
+    border-top:1px solid #eee;
+    margin:15px $padding-left 0px ;
+    &.fixed{
+   /* position:absolute;
+    width:245px;
+    top:35px;
+      */
+    }
+    ul{
+      margin:0px;
+      padding:15px 0px;
+      li{
+        list-style:none;
+        padding:0px;
+        margin:0px;
+        text-indent:0px;
+        font-family:$p-FF;
+        font-weight:500;
+        font-size:14px;
+        line-height:22px;
+      }
+    }
+  }
+
+    .steps{
+      padding:15px $padding-left 0;
+      margin-bottom:100px;
+      text-indent:0px;
+      font-family:$p-FF;
+      font-weight:500;
+      font-size:14px;
+      line-height:22px;
+      /* display:flex; */
+      /* flex-direction: row; */
+      /* align-items: stretch; */
+      height:75%;
+      &.short{height:auto;}
+      &.active{ margin-top:0px;}
+      p{
+        display:block;
+        padding:0px;
+      }
+      h3{
+        border-bottom:1px solid #eee;
+        font-family:$h2-FF;
+        display:block;
+        width:100%;
+        font-size:18px;
+        margin:0px 0px 10px;
+        padding-bottom:10px;
+      }
+    }
+
 }
 
-
-/* follow me template */
-.made-with-love {
-  margin-top: 40px;
-  padding: 10px;
-  clear: left;
-  text-align: center;
-  font-size: 10px;
-  font-family: arial;
-  color: #fff;
-}
-.made-with-love i {
-  font-style: normal;
-  color: #F50057;
-  font-size: 14px;
-  position: relative;
-  top: 2px;
-}
-.made-with-love a {
-  color: #fff;
-  text-decoration: none;
-}
-.made-with-love a:hover {
-  text-decoration: underline;
-}
-
-
-/* for custom scrollbar for webkit browser*/
-
-::-webkit-scrollbar {
-    width: 6px;
-} 
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-} 
-::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-}
