--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ p,section{
   font-family:$p-FF;
   background-color:#333;
   overflow:hidden;
-  background-image:url('https://papers.co/wallpaper/papers.co-bj42-apple-iphone-ios13-background-orange-art-36-3840x2400-4k-wallpaper.jpg');
+  background-image:url('https://64.media.tumblr.com/2f55469948a7cd98684bd1406d484dc8/bfd822a73cf66195-ee/s1280x1920/312590b8ce173e7359d48485174ecccc8af64710.jpg');
   @include full-bg;
   top:0;
   left:0;
