--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ p,section{
   margin:12% auto;
   position:relative;
   @include full-bg;
-    /*background-image:url('https://papers.co/wallpaper/papers.co-bj42-apple-iphone-ios13-background-orange-art-36-3840x2400-4k-wallpaper.jpg');*/
+    /*background-image:url('https://64.media.tumblr.com/2f55469948a7cd98684bd1406d484dc8/bfd822a73cf66195-ee/s1280x1920/312590b8ce173e7359d48485174ecccc8af64710.jpg');*/
   .actions{
     z-index:9999;
     position:absolute;
